# DongTamV2

./: .gitignore  .gitmodules  .project  README.md
.metadata/: version.ini
Code/: .gitignore
Code/.metadata/: .log4j.xml  version.ini
Code/CONFIG_PIN_STM32/: .cproject  (+2 more)
Code/ESP32/main/: .cproject  BoardParameter.c  BoardParameter.h  Button.c  CMakeLists.txt  GUI.c  GUI.h  PressureIndicator.c  ShareVar.h  UART.c  UART.h  main.c  main.h
Code/ESP32/main/GUI/: Button.c  GUI.c  GUI.h  GUI_Navigation.c  GUI_Navigation.h  LedButton.c  LedButton.h  PressureIndicator.c  PressureIndicator.h  Text_GUI.h
Code/ESP32/main/JsonHandle/: JsonHandle.c  JsonHandle.h
Code/ESP32/main/MessageHandle/: MessageHandle.c  MessageHandle.h
Code/ESP32/main/OnlineHandle/: HTTP_POSTGET.c  HTTP_POSTGET.h  OnlineManage.c  WiFi.c  WiFi.h
Code/ESP32/main/WiFi_POSTGET/: DNS_Ping.c  DNS_Ping.h  HTTP_POSTGET.c  HTTP_POSTGET.h  OnlineStatusEvent.c  OnlineStatusEvent.h  WiFi.c  WiFi.h
Hardware/: #auto_saved_files#  16_VALVE_CONTROL.kicad_sch  1_TL084IPT.kicad_sch  2_TL084IPT.kicad_sch  3_TL084IPT.kicad_sch  4-20mAConverter.kicad_sch  4_TL084IPT.kicad_sch  EEPROM.kicad_sch  ESP32.kicad_sch  GET_16_VALVE_STAGE.kicad_sch  IDC14pin.kicad_sch  LORA.kicad_sch  OPAMP.kicad_sch  PRESSURE_SENSOR.kicad_sch  Peripheral.kicad_sch  Power.kicad_sch  RELAY_OPTO.kicad_sch  RS485.kicad_sch  RTC.kicad_sch  STM32F103C8T6.kicad_sch  dongtam.kicad_pcb  dongtam.kicad_prl  dongtam.kicad_pro  dongtam.kicad_sch  untitled.kicad_sch
Image/: DongTamBlockDiagram.drawio
Test/: .cproject  Test Debug.launch  Test.ioc
(+140 files in other folders)
