idf_component_register(SRCS "JsonHandle/JsonHandle.c" "OnlineHandle/HTTP_POSTGET.c"  "OnlineHandle/WiFi.c" "OnlineHandle/OnlineManage.c" "OnlineHandle/DNS_Ping.c" "OnlineHandle/OnlineStatusEvent.c" "UART.c"  "main.c" 
                       INCLUDE_DIRS "."
                       )
                       



